--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 .accordionWrapper {
 	display: grid;
 	grid-template-rows: min-content;
-	grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	 /*grid-template-rows: min-content;*/
   
   grid-row-gap: 5px;
@@ -229,7 +229,7 @@ background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../
   /*float: right;*/
   display: grid;
   /*width: 30%;*/
-  grid-template-columns: repeat(4, min-content);
+  grid-template-columns: repeat(4, max-content);
   /*grid-template-rows: 3rem;*/
   justify-content: end;
   align-content: center;
