--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,8 @@ background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../
   transition: 0.4s;
 }
 
+
+
 /* Links on mouse-over */
 #navbar a:hover {
   background-color: #ddd;
@@ -249,7 +251,11 @@ background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../
     padding: 4px 4px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
   }
 html {
-	font-size: 60%;
+	font-size: 50%;
+}
+
+.about-us {
+	text-align: center;
 }
 
   #navbar a {
@@ -296,4 +302,39 @@ html {
 	margin-top: 5rem;
 	justify-content: center;
 	text-align: center;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+.scrollToTop {
+  margin: 0 30px 20px 0;
+  text-align: center;
+  text-decoration: none;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: none;
+  background-color: yellow;
+}
+
+.scrollToTop:hover {
+  text-decoration: none;
 }
