--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 .accordionWrapper {
 	display: grid;
 	grid-template-rows: min-content;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 	 /*grid-template-rows: min-content;*/
   
   grid-row-gap: 5px;
@@ -253,6 +253,12 @@ background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../
 html {
 	font-size: 50%;
 }
+	
+	.accordionWrapper {
+
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	}
+
 
 .about-us {
 	text-align: center;
