--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,13 @@ html {
 
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	}
-
+.accordionItemHeading{
+    
+    -webkit-border-radius: 0;
+-moz-border-radius: 0;
+border-radius: 0;
+       
+}
 
 .about-us {
 	text-align: center;
