--- a/css/style.css
+++ b/css/style.css
@@ -246,15 +246,14 @@ background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../
 
 /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
 @media screen and (max-width: 580px) {
-/* @media screen and (max-width: 730px) { */
+/*@media screen and (max-width: 730px) {*/
   #navbar {
     padding: 4px 4px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
   }
 html {
 	font-size: 50%;
 }
-	
-	.accordionWrapper {
+.accordionWrapper {
 
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	}
@@ -265,7 +264,6 @@ html {
 border-radius: 0;
        
 }
-
 .about-us {
 	text-align: center;
 }
@@ -316,37 +314,46 @@ border-radius: 0;
 	text-align: center;
 }
 
-#myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
-
-#myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-}
-
-.scrollToTop {
-  margin: 0 30px 20px 0;
+.fab {
+  padding: 20px;
+  font-size: 20px;
+  /*width: 50px;*/
   text-align: center;
   text-decoration: none;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  display: none;
-  background-color: yellow;
+  margin: 5px 2px;
 }
 
-.scrollToTop:hover {
-  text-decoration: none;
+.fab:hover {
+    opacity: 0.7;
 }
+
+.fa-facebook-f {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter{
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-linkedin-in {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-pinterest-p {
+  background: #cb2027;
+  color: white;
+}
+
